--- a/Final-Academic-Projecto-WS-Client/assets/css/geral.css
+++ b/Final-Academic-Projecto-WS-Client/assets/css/geral.css
@@ -7,3 +7,45 @@ h1 {
 	text-transform: uppercase;
 	font-size: 35px;
 }
+
+h2 {
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 30px;
+}
+
+
+h3 {
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 20px;
+}
+
+p > a {
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 15px;
+}
+
+table {
+	color: #fff;
+}
+
+thead {
+	font-weight: bold;
+}
+
+label {
+	color: #fff;
+	text-transform: capitalize;
+	font-size: 20px;
+}
+
+.form-group {
+	margin: 10px 0;
+}
+
+button {
+	cursor: pointer;
+	font-size: 20px !important;
+}
