Implement edit user view (not working)

--- a/Final-Academic-Projecto-WS-Client/assets/css/geral.css
+++ b/Final-Academic-Projecto-WS-Client/assets/css/geral.css
@@ -45,7 +45,8 @@ label {
 	margin: 10px 0;
 }
 
-button {
+button.btn.btn-success,
+button.btn.btn-primary {
 	cursor: pointer;
 	font-size: 20px !important;
 }
